Remove support for none VDDK inspection
Also added list filter by name (contains) and add more info to the GetVMs
