# pkg/types/vm.go
@@ -65,9 +65,11 @@ type VMListResponse struct {
 
 // VMGuestInfo represents guest OS information
 type VMGuestInfo struct {
-	Hostname    string   `json:"hostname,omitempty" example:"web-server-01"`
-	IPAddresses []string `json:"ip_addresses,omitempty" example:"192.168.1.100,10.0.0.5"`
-	GuestID     string   `json:"guest_id,omitempty" example:"rhel9_64Guest"`
+	Hostname             string   `json:"hostname,omitempty" example:"web-server-01"`
+	IPAddresses          []string `json:"ip_addresses,omitempty" example:"192.168.1.100,10.0.0.5"`
+	GuestID              string   `json:"guest_id,omitempty" example:"rhel9_64Guest"`
+	GuestState           string   `json:"guest_state,omitempty" example:"running"`
+	GuestHeartbeatStatus string   `json:"guest_heartbeat_status,omitempty" example:"green"`
 }
 
 // VMMetadata represents VM metadata
@@ -75,18 +77,111 @@ type VMMetadata struct {
 	InstanceUUID string `json:"instance_uuid,omitempty" example:"502e7c6e-b5c3-4d0e-9a5a-8b9c1d2e3f4g"`
 	BiosUUID     string `json:"bios_uuid,omitempty" example:"502e7c6e-b5c3-4d0e-9a5a-8b9c1d2e3f4g"`
 	Annotation   string `json:"annotation,omitempty" example:"Production web server"`
+	Template     bool   `json:"template" example:"false"`
+}
+
+// VMRuntimeInfo represents runtime information
+type VMRuntimeInfo struct {
+	Host                string    `json:"host,omitempty" example:"esxi-01.example.com"`
+	ConnectionState     string    `json:"connection_state" example:"connected"`
+	BootTime            time.Time `json:"boot_time,omitempty" example:"2024-01-15T10:30:00Z"`
+	UptimeSeconds       int64     `json:"uptime_seconds" example:"86400"`
+	MaxCPUUsage         int32     `json:"max_cpu_usage_mhz" example:"4800"`
+	MaxMemoryUsage      int32     `json:"max_memory_usage_mb" example:"4096"`
+	ConsolidationNeeded bool      `json:"consolidation_needed" example:"false"`
+	FaultToleranceState string    `json:"fault_tolerance_state,omitempty" example:"notConfigured"`
+}
+
+// VMDisk represents virtual disk information
+type VMDisk struct {
+	Label           string `json:"label" example:"Hard disk 1"`
+	CapacityKB      int64  `json:"capacity_kb" example:"52428800"`
+	CapacityGB      int64  `json:"capacity_gb" example:"50"`
+	DiskPath        string `json:"disk_path" example:"[datastore1] vm/vm.vmdk"`
+	Datastore       string `json:"datastore" example:"datastore1"`
+	ThinProvisioned bool   `json:"thin_provisioned" example:"true"`
+	DiskMode        string `json:"disk_mode" example:"persistent"`
+}
+
+// VMNetworkAdapter represents network adapter information
+type VMNetworkAdapter struct {
+	Label       string   `json:"label" example:"Network adapter 1"`
+	NetworkName string   `json:"network_name" example:"VM Network"`
+	MacAddress  string   `json:"mac_address" example:"00:50:56:9a:12:34"`
+	IPAddresses []string `json:"ip_addresses,omitempty" example:"192.168.1.100"`
+	Connected   bool     `json:"connected" example:"true"`
+	AdapterType string   `json:"adapter_type" example:"VMXNET3"`
+}
+
+// VMSnapshot represents snapshot information
+type VMSnapshot struct {
+	Name        string    `json:"name" example:"snapshot-1"`
+	Description string    `json:"description" example:"Before upgrade"`
+	CreateTime  time.Time `json:"create_time" example:"2024-01-15T14:30:00Z"`
+	State       string    `json:"state" example:"poweredOff"`
+	Quiesced    bool      `json:"quiesced" example:"true"`
+	ID          int32     `json:"id" example:"1"`
+}
+
+// VMResourceInfo represents resource allocation information
+type VMResourceInfo struct {
+	CPUReservationMHz    int64  `json:"cpu_reservation_mhz" example:"1000"`
+	CPULimitMHz          int64  `json:"cpu_limit_mhz,omitempty" example:"4000"`
+	CPUShares            int32  `json:"cpu_shares" example:"1000"`
+	CPUSharesLevel       string `json:"cpu_shares_level" example:"normal"`
+	MemoryReservationMB  int64  `json:"memory_reservation_mb" example:"2048"`
+	MemoryLimitMB        int64  `json:"memory_limit_mb,omitempty" example:"8192"`
+	MemoryShares         int32  `json:"memory_shares" example:"10240"`
+	MemorySharesLevel    string `json:"memory_shares_level" example:"normal"`
+}
+
+// VMStorageSummary represents storage summary information
+type VMStorageSummary struct {
+	CommittedBytes   int64    `json:"committed_bytes" example:"5368709120"`
+	CommittedGB      int64    `json:"committed_gb" example:"5"`
+	UncommittedBytes int64    `json:"uncommitted_bytes" example:"47244640256"`
+	UncommittedGB    int64    `json:"uncommitted_gb" example:"45"`
+	Datastores       []string `json:"datastores" example:"datastore1,datastore2"`
+}
+
+// VMFileInfo represents VM file information
+type VMFileInfo struct {
+	VMPathName  string   `json:"vm_path_name" example:"[datastore1] vm/vm.vmx"`
+	ConfigFiles []string `json:"config_files,omitempty" example:"[datastore1] vm/vm.vmx,[datastore1] vm/vm.nvram"`
+	LogFiles    []string `json:"log_files,omitempty" example:"[datastore1] vm/vmware.log"`
+}
+
+// VMLocationInfo represents VM location information
+type VMLocationInfo struct {
+	Folder       string `json:"folder,omitempty" example:"group-v123"`
+	ResourcePool string `json:"resource_pool,omitempty" example:"resgroup-456"`
+}
+
+// VMAdvancedInfo represents advanced VM settings
+type VMAdvancedInfo struct {
+	CPUHotAddEnabled      bool   `json:"cpu_hot_add_enabled" example:"false"`
+	CPUHotRemoveEnabled   bool   `json:"cpu_hot_remove_enabled" example:"false"`
+	MemoryHotAddEnabled   bool   `json:"memory_hot_add_enabled" example:"false"`
+	ChangeTrackingEnabled bool   `json:"change_tracking_enabled" example:"false"`
 }
 
 // VMDetailsResponse represents detailed information about a single VM
 type VMDetailsResponse struct {
-	VM        VM              `json:"vm"`
-	Hardware  VMHardwareInfo  `json:"hardware"`
-	Tools     VMToolsInfo     `json:"tools"`
-	GuestInfo VMGuestInfo     `json:"guest_info"`
-	Metadata  VMMetadata      `json:"metadata"`
-	Networks  []VMNetworkInfo `json:"networks,omitempty"`
-	Storage   []VMStorageInfo `json:"storage,omitempty"`
-	Events    []VMEvent       `json:"recent_events,omitempty"`
+	VM              VM                 `json:"vm"`
+	Hardware        VMHardwareInfo     `json:"hardware"`
+	Tools           VMToolsInfo        `json:"tools"`
+	GuestInfo       VMGuestInfo        `json:"guest_info"`
+	Metadata        VMMetadata         `json:"metadata"`
+	Runtime         VMRuntimeInfo      `json:"runtime"`
+	Disks           []VMDisk           `json:"disks,omitempty"`
+	NetworkAdapters []VMNetworkAdapter `json:"network_adapters,omitempty"`
+	Snapshots       []VMSnapshot       `json:"snapshots,omitempty"`
+	CurrentSnapshot string             `json:"current_snapshot,omitempty" example:"snapshot-1"`
+	Resources       VMResourceInfo     `json:"resources"`
+	Storage         VMStorageSummary   `json:"storage"`
+	Files           VMFileInfo         `json:"files"`
+	Location        VMLocationInfo     `json:"location"`
+	Advanced        VMAdvancedInfo     `json:"advanced"`
 }
 
 // VMEvent represents a VM-related event
